--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </main>
 
     <footer>
-        <p>Source: <a href="https://www.venasolutions.com" target="_blank">Vena Solutions - Average Profit Margin by Industry</a></p>
+        <p>Source: <a href="https://www.venasolutions.com/blog/average-profit-margin-by-industry" target="_blank">Vena Solutions - Average Profit Margin by Industry</a></p>
         <p>&copy; 2025 Your Company. All rights reserved.</p>
     </footer>
 
